# winkeylock

./: .gitignore  CONFIGURATION.md  Cargo.toml  LICENSE  Makefile.toml  README.md  build.rs  mise.toml  rustfmt.toml
dev/: icon.psd
src/: autostart.rs  config.rs  config_ui.rs  disable_key.rs  disable_winkey.rs  main.rs  wide_string.rs
