[package]
name = "winkeylock"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Darlington <kevin@outroot.com>"]
readme = "README.md"
repository = "https://github.com/kdar/winkeylock"
homepage = "https://github.com/kdar/winkeylock"
description = """
Automatically enable/disable the windows key when you're in a game or any app that is too busy for notifications.
"""
keywords = ["windows", "winkey"]
build = "build.rs"
exclude = ["/dev/*"]

[dependencies]
once_cell = "1.9.0"
wry = "0.12.2"
tao = "0.5.2"

[build-dependencies]
winres = "0.1.12"

[dependencies.windows]
version = "0.30.0"

features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_HiDpi",
  "Win32_System_Threading",
  "Win32_UI_Accessibility",
  "Win32_UI_Shell",
  "Win32_System_Registry",
  "Win32_Security",
]

[features]

[package.metadata.winres]
OriginalFilename = "winkeylock.exe"
LegalCopyright = "Copyright 2022 Kevin Darlington. MIT licensed."
FileDescription = "Automatically disables the winkey in video games"
ProductName = "Winkey Lock"

[profile.release-fast]
inherits = "release"
lto = true
codegen-units = 1