[package]
name = "winkeylock"
version = "0.2.4"
edition = "2024"
authors = ["Kevin Darlington <kevin@outroot.com>"]
readme = "README.md"
repository = "https://github.com/kdar/winkeylock"
homepage = "https://github.com/kdar/winkeylock"
description = """
Automatically enable/disable the windows key when you're in a game or any app that is too busy for notifications.
"""
keywords = ["windows", "winkey"]
build = "build.rs"
exclude = ["/dev/*"]

[dependencies]
dirs = "6.0.0"
elevated-command = "1.1.2"
iced = { version = "0.10", default-features = false }
notify = { version = "6.1", default-features = false }
once_cell = { version = "1.21.3", default-features = false }
opener = "0.8.3"
serde = { version = "1.0.228", default-features = false }
serde_json = "1.0.145"
tao = { version = "0.34.5", default-features = false }
tray-icon = { version = "0.21.2", default-features = false }
windows-strings = { version = "0.5.1", default-features = false }

[build-dependencies]
winresource = { version = "0.1.27", default-features = false }

[dependencies.windows]
version = "0.62.2"
features = [
  "Win32_Security",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
]

[features]

[package.metadata.winresource]
OriginalFilename = "winkeylock.exe"
LegalCopyright = "Copyright 2022 Kevin Darlington. MIT licensed."
FileDescription = "Winkey Lock"
ProductName = "Winkey Lock"

[profile.release-fast]
inherits = "release"
lto = true
codegen-units = 1
